--- a/app/templates/pages/base.jinja
+++ b/app/templates/pages/base.jinja
@@ -20,7 +20,7 @@
 
     <link rel="icon" href="/static/images/icon.svg">
 
-	<title>{% block title %}{% endblock %}</title>
+	<title>{% block HRV Client Tracker %}{% endblock %}</title>
 
     <script src="/static/js/utils.js"></script>
 
@@ -39,8 +39,9 @@
 
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/things">Things</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/clients">Clients</a></li>
+                <li><a href="/meetings">Meetings</a></li>
+                <li><a href="/follow-ups">Follow-ups</a></li>
             </ul>
         </nav>
     </header>
@@ -56,6 +57,10 @@
         {% endblock %}
 
     </main>
+
+    <footer>
+    &copy; Gideon Kidd 2025
+    </footer>
 
 
     {# Show debug info. Comment this out if not needed #}
