--- a/app/templates/pages/home.jinja
+++ b/app/templates/pages/home.jinja
@@ -17,22 +17,21 @@
 
 {% block content %}
 
-    <h1>Flask Demo App with Turso DB</h1>
+    <h1>HRV Client Tracker</h1>
 
-    <p>This is a simple Flask app that connects to a Turso database to save and retrieve data. This can be used as the basis of your web app.</p>
+    <article>
+     <p>This is a simple way to store client details, log meeting outcomes, and tracking follow-ups</p>
+    </article>
 
-    <p>It includes...</p>
+    <article>
+     <form action="/clients" method="get">
+        <button>Veiw Clients</button>
+     </form>
 
-    <ul>
-        <li>Example routes</li>
-        <li>Example static pages</li>
-        <li>Missing page and server error pages</li>
-        <li>DB connection and error handling</li>
-        <li>Example CRUD actions: Create and Delete</li>
-        <li>Flash messages for information</li>
-    </ul>
-
-    <a href="/things" role="button">Go to the Things...</a>
+     <form action="/meetings/new" method="get">
+        <button>Schedule Meeting</button>
+     </form>
+    </article> {#Button stolen from flask-turso-intro#}
 
 {% endblock %}
 
