--- a/app/templates/pages/clients.jinja
+++ b/app/templates/pages/clients.jinja
@@ -1,77 +1,80 @@
 {#=====================================================
-  About page (DEMO)
-  - Information about Flask
-  - Information about Jinja
-  - Information about Turso
-  - Information about PicoCSS
+  Clients list page
+  - Lists clients passed in as 'clients'
 =====================================================#}
 
 {% extends 'pages/base.jinja' %}
 
-
-{% block title %}
-
-    Flask Demo - About Flask and Jinja
-
-{% endblock %}
-
+{% block title %}Clients{% endblock %}
 
 {% block content %}
 
-    <section id="tech-stack">
+<div class="container"> {#Pico Container#}
 
-        <article>
-            <header>
-                <img src="/static/images/flask.webp" alt="Flask Logo">
-            </header>
+  <h1>Clients</h1>
 
-            <p>Flask is a <strong>web back-end application framework</strong>, written in <strong>Python</strong>. Created in 2010, Flask is regularly voted the most popular Python web framework. Applications that use Flask include Pinterest and LinkedIn.</p>
+  <div class="overflow-auto">  {#Pico Overflow#}
 
-            <footer>
-                <p>Find out more about <a href="https://flask.palletsprojects.com/en/stable/">Flask</a></p>
-            </footer>
-        </article>
+    <table class="striped">  {#Pico Table#}
 
+      <thead>
+      
+        <tr>
 
-        <article>
-            <header>
-                <img src="/static/images/jinja2.png" alt="Jinja Logo">
-            </header>
+          <th>Name</th>
 
-            <p>Jinja is a <strong>templating engine</strong>. Special placeholders in the template allow data to be passed into the template and programmatic operations (e.g. conditions, loops, etc.) using a syntax similar to Python.</p>
+          <th>Phone</th>
 
-            <footer>
-                <p>Find out more about <a href="https://jinja.palletsprojects.com/en/stable/">Jinja</a></p>
-            </footer>
-        </article>
+          <th>Email</th>
 
+          <th>Status</th>
 
-        <article>
-            <header>
-                <img src="/static/images/turso.png" alt="Turso Logo">
-            </header>
+          <th>Notes</th>
 
-            <p>Turso is a <strong>managed database platform</strong> that hosts SQLite-like databases which can be accessed from anywhere via a simple API. The Python API allows for <strong>SQL</strong> commands to be run, returning results as Python dicts.</p>
+        </tr>
 
-            <footer>
-                <p>Find out more about <a href="https://tuso.tech/">Turso</a></p>
-            </footer>
-        </article>
+      </thead>
 
+      <tbody>
 
-        <article>
-            <header>
-                <img src="/static/images/picocss.png" alt="PicoCSS Logo">
-            </header>
+        {% if clients and clients|length %}
 
-            <p>PicoCSS is a minimalist and lightweight <strong>starter stylesheet</strong> that prioritizes semantic syntax, making every HTML element responsive and elegant by default. It acts as a great starting point for any website.</p>
+          {% for c in clients %} {# c in clients simply means we are going through each client in the list one by one #}
 
-            <footer>
-                <p>Find out more about <a href="https://picocss.com">PicoCSS</a></p>
-            </footer>
-        </article>
+          <tr>
 
-    </section>
+            <td>{{ c.name }}</td>
+
+            <td>{{ c.phone }}</td>
+
+            <td>{{ c.email }}</td>
+
+            <td>{{ c.status }}</td>
+
+            <td>{{ c.notes }}</td>
+
+          </tr>
+
+          {% endfor %}
+
+        {% else %}
+
+          <tr><td colspan="5"><em>You have no clients!</em></td></tr>
+
+        {% endif %}
+
+      </tbody>
+
+    </table>
+
+  </div>
+
+  <p style="margin-top:1rem;">
+
+    <a role="button" href="/clients/new">Add client</a>  {#Pico Button#}
+
+  </p>
+
+</div>
 
 {% endblock %}
-
