attempted a 'new clients' page
spoiler for new client page: it didn't work!

--- a/app/templates/pages/clients.jinja
+++ b/app/templates/pages/clients.jinja
@@ -9,13 +9,13 @@
 
 {% block content %}
 
-<div class="container"> {#Pico Container#}
+<div class="container"> {#Picocss Container#}
 
   <h1>Clients</h1>
 
-  <div class="overflow-auto">  {#Pico Overflow#}
+  <div class="overflow-auto">  {#Picocss Overflow auto#}
 
-    <table class="striped">  {#Pico Table#}
+    <table class="striped">  {#Picocss Table#}
 
       <thead>
       
@@ -71,7 +71,7 @@
 
   <p style="margin-top:1rem;">
 
-    <a role="button" href="/clients/new">Add client</a>  {#Pico Button#}
+    <a role="button" href="/clients/new">Add client</a>  {#Picocss Button#}
 
   </p>
 
