--- a/app/templates/pages/home.jinja
+++ b/app/templates/pages/home.jinja
@@ -12,11 +12,11 @@
 
 <main class="container">
 
-{#Pico heading#}
+{#Picocss heading#}
 
 <h1>Dashboard</h1>
 
-{#Pico heading#}
+{#Picocss heading#}
 
 <div class="grid">
 
@@ -46,7 +46,7 @@
 
 </div>
 
-{#Pico table#}
+{#Picocss table#}
 
  <h2>Recent Clients</h2>
 
@@ -94,7 +94,7 @@
 
   </table>
    
-{#Pico button#}
+{#Picocss button#}
 
   <a role="button" href="/clients/new">Add new client</a>
 
