--- a/app/templates/pages/home.jinja
+++ b/app/templates/pages/home.jinja
@@ -96,7 +96,11 @@
    
 {#Picocss button#}
 
-  <a role="button" href="/clients/new">Add new client</a>
+  <a role="button" href="/clients_new">Add new client</a>
+
+  <a role="button" href="/meetings_new">Schedule meeting</a>
+
+ 
 
 </main>
 
