Changing code to authenticity.
If your reading this, that means your actually going through my work, though, I hope you find this message more amusing that upsetting. 

I am going back through the project and redoing the work properly myself. Some of the earlier commits had bits of 'snazzy' code I added without any care from ChatGPT (as I'm sure you already know) without full understanding (though I did manage to break a lot of it down); that was still nonetheless a mistake.                                                From here on I'll only use ChatGPT for reference (e.g. where to find examples online or explain something I don't get), but all actual code will be written and understood by myself from here on out.               

Now in all fairness I could very well be talking to myself or you've simply skim read this to figure out if I actually cheated (though it was blatant) I might as well have this as a slight reminder to do my work myself otherwise I am NOT going to learn anything.  

Good day to you (if you even read this or this far through).

--- a/app/templates/pages/home.jinja
+++ b/app/templates/pages/home.jinja
@@ -1,109 +1,32 @@
 {#=====================================================
-  Home page
-  - Hero style greeting banner
-  - List of things passed in as 'things' array
-  - Form for adding a new thing
+  Home page features (from figma models): 
+  - Shows how many clients there are
+  - Shows the 5 most recent clients
+  - Link to go to Clients page
 =====================================================#}
 
 {% extends 'pages/base.jinja' %}
 
+{% block title %}
+  HRV Client Tracker
+{% endblock %}
 
 {% block content %}
 
-<main class="container">
+  <h1>Home - HRV Client Tracker</h1>
 
-{#Picocss heading#}
+  <p>Total clients: {{ client_count }}</p>
 
-<h1>Dashboard</h1>
+  <h2>Recent Clients</h2>
 
-{#Picocss heading#}
+  <ul>
+    {% for c in clients %}
+      <li>{{ c.name }} // {{ c.phone }} // {{ c.email }} // {{ c.status }} // {{ c.notes }}</li>
+    {% else %}
+      <li>You have no clients.</li>
+    {% endfor %}
+  </ul>
 
-<div class="grid">
-
-<article>
-
- <h2>Clients</h2>
-
- <p>Total: {{ client_count }}</p>
-
-</article>
-
-<article>
-
-  <h2>Follow-ups</h2>
-
-  <p>Total: {{ followup_count }}</p>
-
-</article>
-    
-<article>
-
-  <h2>Tasks</h2>
-
-  <p>Total: {{ task_count }}</p>
-
-  </article>
-
-</div>
-
-{#Picocss table#}
-
- <h2>Recent Clients</h2>
-
-  <table>
-
-    <thead>
-
-      <tr>
-      
-        <th>Name</th>
-
-        <th>Phone</th>
-
-        <th>Email</th>
-
-        <th>Status</th>
-
-        <th>Notes</th>
-
-      </tr>
-
-    </thead>
-
-    <tbody>
-
-      {% for client in clients %}
-
-      <tr>
-
-        <td>{{ client.name }}</td>
-
-        <td>{{ client.phone }}</td>
-
-        <td>{{ client.email }}</td>
-
-        <td>{{ client.status }}</td>
-
-        <td>{{ client.notes }}</td>
-
-      </tr>
-
-      {% endfor %}
-
-    </tbody>
-
-  </table>
-   
-{#Picocss button#}
-
-  <a role="button" href="/clients_new">Add new client</a>
-
-  <a role="button" href="/meetings_new">Schedule meeting</a>
-
- 
-
-</main>
-
+  <a href="/clients/">Go to Clients</a>
+  
 {% endblock %}
-
-
