Makimg it work ig

--- a/app/templates/pages/base.jinja
+++ b/app/templates/pages/base.jinja
@@ -31,9 +31,9 @@
 
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/clients/">Clients</a></li>
-                <li><a href="/meetings/">Meetings</a></li>
-                <li><a href="/follow-ups/">Follow-ups</a></li>
+                <li><a href="/clients">Clients</a></li>
+                <li><a href="/meetings">Meetings</a></li>
+                <li><a href="/follow-ups">Follow-ups</a></li>
             </ul>
         </nav>
     </header>
