--- a/app/templates/pages/follow-ups.jinja
+++ b/app/templates/pages/follow-ups.jinja
@@ -1,27 +1,8 @@
-{#=====================================================
-  Follow-ups list page
-=====================================================#}
-
 {% extends 'pages/base.jinja' %}
 
-{% block title %}Follow-ups{% endblock %}
+{% block title %}HRV Client Tracker{% endblock %}
 
 {% block content %}
-
-<p>
-{#PicoCSS dropdown#}
-<select name="meeting_type">
-
-        <option value=""> select </option>
-
-        <option value="in-person">in-person</option>
-
-        <option value="call">call</option>
-
-        <option value="facetime">facetime</option>
-
-      </select>
-
-</p>
-
+    <h1>Follow-ups</h1>
+    <p>in progress</p>
 {% endblock %}
