--- a/app/templates/pages/meetings.jinja
+++ b/app/templates/pages/meetings.jinja
@@ -25,8 +25,18 @@
     <h3>Add a New Meeting</h3>
 
     <form action="/meetings/add" method="POST">
-    
-      <input type="number" name="client_id" min="1" placeholder="Client ID (e.g. 1)" required>
+  
+       <select>
+
+           <option disabled selected value="">Select a client</option>
+
+           {% for c in clients %}
+
+               <option>{{ c.name }}</option>
+ 
+           {% endfor %}
+
+       </select>
       <input type="date"   name="date"   required>
       <input type="time"   name="time"   required>
       
