attempted search bar (showed NO of clients but not by name)

--- a/app/templates/pages/meetings.jinja
+++ b/app/templates/pages/meetings.jinja
@@ -8,16 +8,7 @@
 
   <div class="overflow-auto"> {# pico: Overflow auto #}
 
-    <ul>
-      {% for m in meetings %}
-        <li>
-          ID {{ m.id }} // Client {{ m.client_id }} // {{ m.date }} {{ m.time }} // {{ m.type }} // {{ m.location }} // {{ m.notes }}
-        </li>
-
     
-      {% endfor %}
-
-    </ul>
   </div>
 
   <article>
@@ -26,17 +17,13 @@
 
     <form action="/meetings/add" method="POST">
   
-       <select>
+        <select name="client_id" required>
+          <option disabled selected value="">Select a client</option>
+          {% for client in clients %}
+            <option>{{ client.name }}</option>
+          {% endfor %}
+        </select>
 
-           <option disabled selected value="">Select a client</option>
-
-           {% for c in clients %}
-
-               <option>{{ c.name }}</option>
- 
-           {% endfor %}
-
-       </select>
       <input type="date"   name="date"   required>
       <input type="time"   name="time"   required>
       
